Integrated Firebase into App, Created Sign In page with Component with google

--- a/food-restaurant/src/App.css
+++ b/food-restaurant/src/App.css
@@ -2,3 +2,11 @@ body {
     font-family: 'Coming Soon';
     padding:20px 60px;
 }
+a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
