--- a/food-restaurant/src/components/header/header.styles.scss
+++ b/food-restaurant/src/components/header/header.styles.scss
@@ -23,7 +23,8 @@
     font-size: 1.5em;
     letter-spacing: 3px;
     color: #000;
-    text-decoration: none;;
+    text-decoration: none;
+    cursor: pointer;
     }
   }
 }
